--- a/BubblesGame/app/src/main/res/layout/activity_main.xml
+++ b/BubblesGame/app/src/main/res/layout/activity_main.xml
@@ -32,10 +32,18 @@
         android:id="@+id/root"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/score">
+        app:layout_constraintTop_toBottomOf="@+id/imageButton3" />
 
-    </RelativeLayout>
+    <ImageButton
+        android:id="@+id/imageButton3"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        app:layout_constraintEnd_toStartOf="@+id/score"
+        app:layout_constraintStart_toEndOf="@+id/lives"
+        android:background="@drawable/home"
+        android:onClick="goToHome"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
